--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
     <h1 class="header-h1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, nihil eum quisquam 
         sapiente reiciendis officia nulla quasi assumenda fugiat accusantium, sequi alias doloribus
          ut, quaerat maxime iste natus iusto cum error. Autem quam optio placeat.</h1>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, repellendus!</p>
     
 </body>
 </html>
