--- a/html/4th.html
+++ b/html/4th.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.6" />
     <link rel="stylesheet" href="/css/4th.css" />
     <title>4th lesson</title>
   </head>
   <body>
     <header>
       <div class="header">
-        <h5>HOME</h5>
-        <h5>ABOUT</h5>
-        <h5>MENU</h5>
-        <h5>WHERE</h5>
+        <ul>
+           <li><a href="#">HOME</a></li>
+           <li><a href="#about">ABOUT</a></li>
+           <li><a href="#menu">MENU</a></li>
+           <li><a href="#where">WHERE</a></li>
+        </ul>
       </div>
     </header>
     <section>
@@ -33,7 +35,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section id="about">
       <br />
       <br />
       <div class="section2">
@@ -75,7 +77,7 @@
               <span style="font-weight: 100">15 Adr street, 5015, NY</span></b
             >
           </div>
-          <br />
+          <br id="menu">
           <br />
           <div>
             <h2 class="menu-div">THE MENU</h2>
@@ -83,14 +85,14 @@
           <br />
           <br />
           <div class="section2-3">
-            <div class="second-div">
-              <h3>Drink</h3>
+            <div class="background">
+              <h3>Eat</h3>
+              <h3 class="right-h3" style="background-color: white;">Drink</h3>
             </div>
             <div class="first-div">
-              <h3>Eat</h3>
-              <br />
-              <br />
-              <br />
+              <br>
+              <br>
+              <br>
               <div class="inner-div">
                 <h1>Bread Basket</h1>
                 <p>Assortment of fresh baked fruit breads and muffins 5.50</p>
@@ -115,13 +117,12 @@
                 <br />
               </div>
             </div>
-          </div>
           <br />
           <br />
           <img class="img" src="/images/coffeehouse2.jpg" alt="img">
         </div>
       </div>
-      <br />
+      <br id="where">
       <br />
       <footer>
         <div class="section4">
@@ -139,7 +140,7 @@
                  <b>Reserve </b><p style="display: inline-block;"> a table, ask for today's 
                   special or just send us a message:</p>
             <div class="input-div">
-              <input type="text" placeholder="Name">
+              <input type="text" placeholder="Name" required>
               <input type="number" placeholder="How many people">
               <input type="date" placeholder="Name">
               <input type="text" placeholder="Message \ Specia requirements">
